DISCORD TRUC QUI MARCHE SLAYED + bug fix lol

--- a/pom.xml
+++ b/pom.xml
@@ -86,5 +86,10 @@
             <artifactId>tabbed</artifactId>
             <version>v1.8</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.DV8FromTheWorld</groupId>
+            <artifactId>JDA</artifactId>
+            <version>v5.0.0-beta.2</version>
+        </dependency>
     </dependencies>
 </project>
