--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 
     <groupId>com.xiii.libertycity</groupId>
     <artifactId>LibertyCity</artifactId>
-    <version>v2</version>
+    <version>${git.commit.id.describe-short}</version>
     <packaging>jar</packaging>
 
-    <name>LibertyCity v2</name>
+    <name>LibertyCity</name>
 
     <description>LibertyCity's plugin</description>
     <properties>
@@ -19,6 +19,23 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>pl.project13.maven</groupId>
+                <artifactId>git-commit-id-plugin</artifactId>
+                <version>2.2.4</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>revision</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
+                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
+                    <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
